# hammer

./: .gitignore  LICENSE  README.md  fetch-dependencies.sh  install  uninstall.sh
backend/: CMakeLists.txt  CMakeLists.txt.in
backend/codeQL/: _testing_compile_db.sh  codeql_compilation.cmake  setup_codeql.cmake
backend/compilation_profiling/: DataHandlingUtils.py  ExportProfilationData.py  TODOs  buildbloat.py  profile_compilation.py  profile_compilation.sh.in  setup_profiling.cmake
backend/configure/: generate_coverage.sh.in  version.h.in
backend/default_project/src/: main.c
backend/doxygen/: Doxyfile.in  backup_Doxyfile.in  configure_doxyfile.sh  default_README.md  docs.cmake
backend/fuzzing/: fuzz.cmake
backend/git/: GitConfig.cmake  GitUtils.cmake  UpdateSubmodules.cmake
backend/hardening/: cfi.cmake  fortify.cmake  nx.cmake  position_independence.cmake  relro.cmake  stack_canary.cmake  tls.cmake
backend/install_scripts/: codeql.sh  compile_hammer.sh  doxygen.sh  llvm-cov.sh  uninstall_codeql.sh  uninstall_doxygen.sh  uninstall_hammer.sh  uninstall_llvm-cov.sh  uninstall_valgrind.sh  uninstall_vcpkg.sh  update_hammer.sh  valgrind.sh  vcpkg.sh
backend/lint/: clang-tidy.in  configure_linter.cmake  lint.sh.in  run_clang_tidy.sh.in
backend/obfuscation/: README.md  configure_obfuscation.cmake  nix_encrypt_and_patch.py  requirements.txt  static_lib_encrypt_and_patch.py  target_pairs.txt  win_encrypt_and_patch.py
backend/obfuscation/include/: anti_debug.h  junkle.h  runtime_decryption.h  sensible_code.h
backend/obfuscation/src/: junkle.c  runtime_decryption.c
backend/obfuscation/tests/: enc_dec.cpp
backend/packaging/: add_to_PATH.wxs.in  emit_installer.cmake  install_wix.sh  nuget.cmake  setup_wix.sh  uninstall_wix.sh  wix.cmake
backend/presets/: CMakePresets.json.in  CMakeUserPresets.json.in  Launch.json
backend/project_config/: dependencies.yml  full_settings.yml  settings.yml
backend/sanitize/: configure_sanitizer.cmake
backend/strip/: configure_strip.cmake
backend/subprojects/: configure_subprojects.cmake
backend/tests/: coverage.cmake  test.cmake
backend/toolchains/clang/: toolchain.cmake  win_clang.cmake
backend/toolchains/clang/profiles/: debug  debug-linux  debug-pedantic  debug-windows  release  release-linux  release-windows
backend/toolchains/emscriptem/: emscriptem.cmake
backend/toolchains/emscriptem/profiles/: emscriptem.cmake
backend/toolchains/gcc/: toolchain.cmake
backend/toolchains/gcc/profiles/: debug  release
backend/toolchains/msvc/: toolchain.cmake
backend/toolchains/msvc/profiles/: debug  release
backend/toolchains/zig/: zig.cmake
backend/toolchains/zig/profiles/: zig_dbg.cmake
backend/utility_scripts/: add_runtime_libs.cmake  configuration_support.cmake  configure_valgrind.cmake  external_projects.cmake  fetch_repos.cmake  input_validation.cmake
backend/vcpkg/: parse_vcpkg.sh  testing_framework.cmake  vcpkg_hidden_vars.cmake  vcpkg_install_libs.cmake  vcpkg_link_libs.cmake
backend/zig/: compile_zig.cmake
cli/: build.zig  configuration.c  configuration.h  configuration.zig  main.c  main.zig
cli/commands/: _build.zig  autobuild.zig  build.zig  clean.zig  commands.c  commands.h  commands.zig  config.c  config.zig  help.zig  init.c  init.zig  install.zig  new.c  new.zig  uninstall.zig  update.zig
cli/templates/: defines.yml  hidden.yml  sources.yml  vcpkg.json
cli/utils/: compile_utils  filecopy.c  filecopy.h  linked-list.zig  linked_list.c  linked_list.h  parsing.zig  process.zig  reverse_search.c  reverse_search.h  search-filesystem.zig  transpile.zig
cli/utils/yaml/: compile_yaml_testing  config.c  defines.c  dependencies.c  settings.c  sources.c  test_yaml_module  toolchain.c  transpile.c  transpile.h
cli/utils/yaml/.configure/: README  defines.yml  dependencies.yml  settings.yml
cli/yaml/: config.c  defines.c  toolchain.c  transpile.c
cli/yaml/.configure/: dependencies.yml  full_settings.yml  settings.yml  sources.yml  toolchain.yml
documentation/: FAQ.md
documentation/guides/: create_new_project.md  multiple_sub_projects.md
examples/: create_new_project.md
guides/: compile_existing_project.md
installers/: fetch-dependencies.sh  get-zig  uninstall.sh  windows-install-hammer.ps1
